--- a/config/yazi/keymap.toml
+++ b/config/yazi/keymap.toml
@@ -2,31 +2,32 @@
 
 # A TOML linter such as https://taplo.tamasfe.dev/ can use this schema to validate your config.
 # If you encounter any issues, please make an issue at https://github.com/yazi-rs/schemas.
-"$schema" = "https://yazi-rs.github.io/schemas/keymap.json"
+'$schema' = 'https://yazi-rs.github.io/schemas/keymap.json'
 
 # https://yazi-rs.github.io/docs/configuration/keymap
 
 [mgr]
 # https://yazi-rs.github.io/docs/configuration/keymap#manager
 keymap = [
-	{ on = "<Esc>",run = "escape --all",      desc = "Exit visual mode, clear selected, or cancel search" },
-	{ on = "<C-[>",run = "escape --all",      desc = "Exit visual mode, clear selected, or cancel search" },
-	{ on = "<C-w>",run = "close",             desc = "Close the current tab, or quit if it is last tab" },
-	{ on = "<C-d>",run = "close",             desc = "Close the current tab, or quit if it is last tab" },
-	{ on = "<C-q>",run = "quit --no-cwd-file",desc = "Exit the process without writing cwd-file" },
+	{ on = '<Esc>', run = 'escape --all',       desc = "Exit visual mode, clear selected, or cancel search" },
+	{ on = '<C-[>', run = 'escape --all',       desc = "Exit visual mode, clear selected, or cancel search" },
+	{ on = '<C-c>', run = 'escape --all',       desc = "Exit visual mode, clear selected, or cancel search" },
+	# { on = '<C-z>', run = 'suspend',            desc = "Pauses Yazi and returns to the parent shell" },
+	{ on = '<C-w>', run = 'close',              desc = "Close the current tab; if it's the last tab exit the process" },
+	{ on = '<C-q>', run = 'quit --no-cwd-file', desc = "Exit the process without writing cwd-file" },
 
 	# Navigation
-	{ on = "<Enter>",   run = "plugin smart-enter",desc = "Open file/Enter directory" },
-	{ on = "<PageUp>",  run = "arrow -100%",       desc = "Move cursor up one page" },
-	{ on = "<PageDown>",run = "arrow 100%",        desc = "Move cursor down one page" },
-	{ on = "H",         run = "back",              desc = "Go back to the previous directory" },
-	{ on = "J",         run = "arrow 50%",         desc = "Move cursor down half page" },
-	{ on = "K",         run = "arrow -50%",        desc = "Move cursor up half page" },
-	{ on = "L",         run = "plugin smart-enter",desc = "Go to child directory/Open file" },
-	{ on = "h",         run = "leave",             desc = "Go back to the parent directory" },
-	{ on = "j",         run = "arrow 1",           desc = "Move cursor down" },
-	{ on = "k",         run = "arrow -1",          desc = "Move cursor up" },
-	{ on = "l",         run = "enter",             desc = "Go to child directory" },
+	{ on = '<Enter>',    run = 'plugin smart-enter', desc = "Open file/Enter the child directory" },
+	{ on = '<PageUp>',   run = 'arrow -100%',        desc = "Move cursor up one page" },
+	{ on = '<PageDown>', run = 'arrow 100%',         desc = "Move cursor down one page" },
+	{ on = 'H',          run = 'back',               desc = "Go back to the previous directory" },
+	{ on = 'J',          run = 'arrow 50%',          desc = "Move cursor down half page" },
+	{ on = 'K',          run = 'arrow -50%',         desc = "Move cursor up half page" },
+	{ on = 'L',          run = 'enter',              desc = "Enter the child directory" },
+	{ on = 'h',          run = 'leave',              desc = "Go back to the parent directory" },
+	{ on = 'j',          run = 'arrow 1',            desc = "Move cursor down" },
+	{ on = 'k',          run = 'arrow -1',           desc = "Move cursor up" },
+	{ on = 'l',          run = 'enter',              desc = "Enter the child directory" },
 
 	# Previewer
 	{ on = "<A-f>",run = "plugin toggle-pane max-preview",desc = "Maximize or restore preview" },
@@ -44,7 +45,7 @@ keymap = [
 
 	# Functions
 	{ on = "<Tab>",    run = "spot",                          desc = "Spot hovered file" },
-	{ on = "<C-Enter>",run = "open --interactive",            desc = "Open selected files interactively" },
+	{ on = 'o',        run = 'open --interactive --hovered',  desc = "Open selected files interactively" },
 	{ on = "-",        run = "link",                          desc = "Symlink the absolute path of yanked files" },
 	{ on = "_",        run = "link --relative",               desc = "Symlink the relative path of yanked files" },
 	{ on = "<Delete>", run = "remove --permanently",          desc = "Permanently delete selected files" },
@@ -69,7 +70,7 @@ keymap = [
 	{ on = ["m","n"],run = "linemode none",       desc = "Set linemode to none" },
 
 	# Yank/Cut/Paste
-	{ on = ["y","y"],run = "yank",                 desc = "Yank selected files (copy)" },
+	{ on = ["y","y"],run = [ 'shell -- for path in %s; do echo "file://$path"; done | wl-copy -t text/uri-list', "yank" ], desc = "Yank selected files (copy)" },
 	{ on = ["d","d"],run = "yank --cut",           desc = "Yank selected files (cut)" },
 	{ on = ["d","u"],run = "unyank",               desc = "Cancel the yank status" },
 	{ on = "p",      run = "paste",                desc = "Paste yanked files" },
@@ -112,7 +113,7 @@ keymap = [
 	{ on = ["g","c"], run = "cd ~/.config",                   desc = "Go to ~/.config" },
 	{ on = ["g","d"], run = "cd ~/.dotfiles",                 desc = "Go to ~/.dotfiles" },
 	{ on = ["g","t"], run = "cd /tmp",                        desc = "Go to /tmp" },
-	{ on = ["g","`"], run = "cd ~/Documents/UnADM/2025-2-B1", desc = "Go to homework" },
+	{ on = ["g","`"], run = "cd ~/Documents/UnADM/2026-1-B1", desc = "Go to homework" },
 	{ on = ["g","u"], run = "cd ~/Documents/UnADM",           desc = "Go to UnADM" },
 	{ on = ["g","a"], run = "cd $AUR",                        desc = "Go to $AUR" },
 	{ on = ["c","d"], run = "cd --interactive",               desc = "Go to a directory interactively" },
@@ -146,42 +147,47 @@ keymap = [
 [tasks]
 # https://yazi-rs.github.io/docs/configuration/keymap#tasks
 keymap = [
-	{ on = "<Esc>", run = "close", desc = "Close task manager" },
-	{ on = "w",     run = "close", desc = "Close task manager" },
+	{ on = '<Esc>', run = 'close', desc = "Close task manager" },
+	{ on = 'w',     run = 'close', desc = "Close task manager" },
+	{ on = 'q',     run = 'close', desc = "Close task manager" },
 
-	{ on = "k", run = "arrow -1", desc = "Move cursor up" },
-	{ on = "j", run = "arrow 1",  desc = "Move cursor down" },
+	{ on = 'k', run = 'arrow -1', desc = "Move cursor up" },
+	{ on = 'j', run = 'arrow 1',  desc = "Move cursor down" },
 
-	{ on = "<Enter>", run = "inspect", desc = "Inspect the task" },
-	{ on = "x",       run = "cancel",  desc = "Cancel the task" },
+	{ on = '<Enter>', run = 'inspect', desc = "Inspect the task" },
+	{ on = 'x',       run = 'cancel',  desc = "Cancel the task" },
 
 	# Help
-	{ on = "<F1>", run = "help", desc = "Open help" },
+	{ on = '<F1>', run = 'help', desc = "Open help" },
 ]
 
 [pick]
 # https://yazi-rs.github.io/docs/configuration/keymap/#pick
 keymap = [
-	{ on = "<Esc>",   run = "close",          desc = "Cancel the picker" },
-	{ on = "<C-[>",   run = "close",          desc = "Cancel the picker" },
-	{ on = "<Enter>", run = "close --submit", desc = "Submit the picker" },
+	{ on = '<Esc>',   run = 'close',          desc = "Cancel the picker" },
+	{ on = '<C-[>',   run = 'close',          desc = "Cancel the picker" },
+	{ on = '<C-c>',   run = 'close',          desc = "Cancel the picker" },
+	{ on = '<Enter>', run = 'close --submit', desc = "Submit the picker" },
+	{ on = '<C-j>',   run = 'close --submit', desc = "Submit the picker" },
 
-	{ on = "k", run = "arrow -1", desc = "Move cursor up" },
-	{ on = "j", run = "arrow 1",  desc = "Move cursor down" },
+	{ on = 'k', run = 'arrow -1', desc = "Move cursor up" },
+	{ on = 'j', run = 'arrow 1',  desc = "Move cursor down" },
 
-	{ on = "<Up>",   run = "arrow -1", desc = "Move cursor up" },
-	{ on = "<Down>", run = "arrow 1",  desc = "Move cursor down" },
+	{ on = '<Up>',   run = 'arrow -1', desc = "Move cursor up" },
+	{ on = '<Down>', run = 'arrow 1',  desc = "Move cursor down" },
 
 	# Help
-	{ on = "<F1>", run = "help", desc = "Open help" },
+	{ on = '<F1>', run = 'help', desc = "Open help" },
 ]
 
 [input]
 # https://yazi-rs.github.io/docs/configuration/keymap#input
 keymap = [
-	{ on = "<Esc>",   run = "close",          desc = "Cancel input" },
-	{ on = "<C-[>",   run = "close",          desc = "Cancel input" },
-	{ on = "<Enter>", run = "close --submit", desc = "Submit input" },
+	{ on = '<Esc>',   run = 'close',          desc = "Cancel input" },
+	{ on = '<C-[>',   run = 'close',          desc = "Cancel input" },
+	{ on = '<C-c>',   run = 'close',          desc = "Cancel input" },
+	{ on = '<Enter>', run = 'close --submit', desc = "Submit input" },
+	{ on = '<C-j>',   run = 'close --submit', desc = "Submit input" },
 
 	# Character-wise movement
 	{ on = "<Left>",  run = "move -1", desc = "Move back a character" },
@@ -232,12 +238,15 @@ keymap = [
 	{ on = "<F1>", run = "help", desc = "Open help" },
 ]
 
-[completion]
+[cmp]
 # https://yazi-rs.github.io/docs/configuration/keymap#completion
 keymap = [
 	{ on = "<C-[>",   run = "close",                                      desc = "Cancel completion" },
 	{ on = "<Tab>",   run = "close --submit",                             desc = "Submit the completion" },
-	{ on = "<Enter>", run = [ "close --submit", "close_input --submit" ], desc = "Submit the completion and input" },
+	{ on = '<Enter>', run = [ 'close --submit', 'input:close --submit' ], desc = "Submit the completion and input" },
+
+	{ on = '<C-i>',   run = 'close --submit',                             desc = "Submit the completion" },
+	{ on = '<C-j>',   run = [ 'close --submit', 'input:close --submit' ], desc = "Submit the completion and input" },
 
 	{ on = "<A-k>", run = "arrow -1", desc = "Move cursor up" },
 	{ on = "<A-j>", run = "arrow 1",  desc = "Move cursor down" },
