--- a/config/yazi/yazi.toml
+++ b/config/yazi/yazi.toml
@@ -2,33 +2,32 @@
 
 # A TOML linter such as https://taplo.tamasfe.dev/ can use this schema to validate your config.
 # If you encounter any issues, please make an issue at https://github.com/yazi-rs/schemas.
-"$schema" = "https://yazi-rs.github.io/schemas/yazi.json"
+'$schema' = 'https://yazi-rs.github.io/schemas/yazi.json'
 
 # https://yazi-rs.github.io/docs/configuration/yazi#manager
 [mgr]
-# ratio          = [ 3, 6, 8 ]
-ratio          = [ 5, 8, 13 ]
-sort_by        = "natural"
+ratio          = [ 5, 9, 13 ]
+sort_by        = 'natural'
 sort_sensitive = false
 sort_reverse   = false
 sort_dir_first = true
 sort_translit  = true
-linemode       = "none"
+linemode       = 'none'
 show_hidden    = false
 show_symlink   = true
 scrolloff      = 255
-mouse_events   = [ "click", "scroll" ]
+mouse_events   = [ 'click', 'scroll' ]
 title_format   = "{cwd} — File Manager"
 
 # https://yazi-rs.github.io/docs/configuration/yazi#preview
 [preview]
-wrap            = "no"
+wrap            = 'no'
 tab_size        = 2
 max_width       = 600
 max_height      = 900
-cache_dir       = ""
+cache_dir       = ''
 image_delay     = 100
-image_filter    = "triangle"
+image_filter    = 'triangle'
 image_quality   = 75
 ueberzug_scale  = 1
 ueberzug_offset = [ 0, 0, 0, 0 ]
@@ -36,67 +35,74 @@ ueberzug_offset = [ 0, 0, 0, 0 ]
 # https://yazi-rs.github.io/docs/configuration/yazi#opener
 [opener]
 edit = [
-	{ run = '${EDITOR:-vi} "$@"', desc = "Edit", block = true, for = "unix" },
-	{ run = 'code %*',    orphan = true, desc = "code",           for = "windows" },
-	{ run = 'code -w %*', block = true,  desc = "code (block)",   for = "windows" },
+    { run = '$EDITOR %s',  desc = "Edit", block = true, for = 'unix' },
+    { run = '%EDITOR% %s', desc = "Edit", block = true, for = 'windows' },
 ]
 open = [
-	{ run = 'xdg-open "$1"', orphan = true, desc = "Open", for = "linux" },
-	{ run = 'open "$@"',                    desc = "Open", for = "macos" },
-	{ run = 'start "" "%1"', orphan = true, desc = "Open", for = "windows" },
+    { run = 'xdg-open %s', desc = "Open", orphan = true, for = 'linux' },
+    { run = 'open %s',     desc = "Open",                for = 'macos' },
+    { run = 'start "" %s', desc = "Open", orphan = true, for = 'windows' },
 ]
 reveal = [
-	{ run = 'xdg-open "$(dirname "$1")"',           desc = "Reveal", for = "linux" },
-	{ run = 'open -R "$1"',                         desc = "Reveal", for = "macos" },
-	{ run = 'explorer /select,"%1"', orphan = true, desc = "Reveal", for = "windows" },
-	{ run = '''exiftool "$1"; echo "Press enter to exit"; read _''', block = true, desc = "Show EXIF", for = "unix" },
+    { run = 'xdg-open %d1',         desc = "Reveal",                for = 'linux' },
+    { run = 'open -R %s1',          desc = "Reveal",                for = 'macos' },
+    { run = 'explorer /select,%s1', desc = "Reveal", orphan = true, for = 'windows' },
+    { run = '''exiftool %s1; echo "Press enter to exit"; read _''', desc = "Show EXIF", block = true, for = 'unix' },
 ]
 extract = [
-	{ run = 'ya pub extract --list "$@"', desc = "Extract here", for = "unix" },
-	{ run = 'ya pub extract --list %*',   desc = "Extract here", for = "windows" },
+    { run = 'ya pub extract --list %s', desc = "Extract here", for = 'unix' },
+    { run = 'ya pub extract --list %s', desc = "Extract here", for = 'windows' },
+]
+compress = [
+    { run = '7z a -tzip -mx=9 -mfb=258 %s1.zip %s', desc = "Compress to ZIP",     for = 'unix' },
+    { run = '7z a -t7z -mx=9 %s1.7z %s',            desc = "Compress to 7ZIP",    for = 'unix' },
+    { run = 'tar --zstd -cf %s1.tar.zst %s',        desc = "Compress to TAR.ZST", for = 'unix' },
+    { run = '7z a -tzip -mx=9 -mfb=258 %s1.zip %s', desc = "Compress to ZIP",     for = 'windows' },
+    { run = '7z a -t7z -mx=9 %s1.7z %s',            desc = "Compress to 7ZIP",    for = 'windows' },
 ]
 play = [
-	{ run = 'mpv --force-window "$@"', orphan = true, desc = "Play (resume)", for = "unix" },
-	{ run = 'mpv --no-resume-playback --force-window "$@"', orphan = true, desc = "Play (da capo)", for = "unix" },
-	{ run = 'mpv --force-window %*', orphan = true, for = "windows" },
+    { run = 'mpv --force-window %s',                      desc = "Play (resume)",  orphan = true, for = 'unix' },
+    { run = 'mpv --no-resume-playback --force-window %s', desc = "Play (da capo)", orphan = true, for = 'unix' },
+    { run = 'mpv --force-window %s',                      desc = "Play (resume)",  orphan = true, for = 'windows' },
+    { run = 'mpv --no-resume-playback --force-window %s', desc = "Play (da capo)", orphan = true, for = 'windows' },
 ]
 mediainfo = [
-	{ run = '''mediainfo "$1"; echo "Press enter to exit"; read _''', block = true, desc = "Show media info", for = "unix" },
+    { run = '''mediainfo %s1; echo "Press enter to exit"; read _''', desc = "Show media info", block = true, for = 'unix' },
 ]
 libreoffice = [
-	{ run = 'libreoffice --nodefault --nologo "$1"', orphan = true, desc = "LibreOffice" },
+    { run = 'libreoffice --nodefault --nologo %s1', desc = "LibreOffice", orphan = true },
 ]
 gimp = [
-	{ run = 'gimp "$1"', orphan = true, desc = "Edit Image in GIMP" },
+    { run = 'gimp %s1', desc = "Edit Image in GIMP", orphan = true },
 ]
 audacity = [
-	{ run = 'audacity "$1"', orphan = true, desc = "Edit in Audacity" },
+    { run = 'audacity %s1', desc = "Edit in Audacity", orphan = true },
 ]
 
 # https://yazi-rs.github.io/docs/configuration/yazi#open
 [open]
 rules = [
-	# Folder
-	{ name = "*/", use = [ "edit", "open", "reveal" ] },
-	# Text
-	{ mime = "text/*", use = [ "edit", "open","reveal" ] },
-	# Image
-	{ mime = "image/*", use = [ "open", "gimp", "reveal" ] },
-	# Media
-	{ mime = "{audio,video}/*", use = [ "play", "audacity" ] },
-	# Archive
-	{ mime = "application/{,g}zip", use = [ "extract", "reveal" ] },
-	{ mime = "application/{tar,bzip*,7z-compressed,xz,rar}", use = [ "extract", "reveal" ] },
-	# JSON
-	{ mime = "application/{json,ndjson}", use = [ "edit", "reveal" ] },
-	{ mime = "*/javascript", use = [ "edit", "reveal" ] },
-	# Documents
-	{ mime = "application/openxmlformats-officedocument.*", use = [ "libreoffice" ] },
-	{ mime = "application/oasis.opendocument.*", use = [ "libreoffice" ] },
-	# Empty file
-	{ mime = "inode/empty", use = [ "edit", "reveal" ] },
-	# Fallback
-	{ name = "*", use = [ "open", "reveal" ] },
+    # Folder
+    { url = '*/', use = [ 'edit', 'open', 'reveal', 'compress' ] },
+    # Text
+    { mime = 'text/*', use = [ 'edit', 'open','reveal' ] },
+    # Image
+    { mime = 'image/*', use = [ 'open', 'gimp', 'reveal' ] },
+    # Media
+    { mime = '{audio,video}/*', use = [ 'play', 'audacity' ] },
+    # Archive
+    { mime = 'application/{,g}zip',                          use = [ 'extract', 'reveal' ] },
+    { mime = 'application/{tar,bzip*,7z-compressed,xz,rar}', use = [ 'extract', 'reveal' ] },
+    # JSON
+    { mime = 'application/{json,ndjson}', use = [ 'edit', 'reveal' ] },
+    { mime = '*/javascript',              use = [ 'edit', 'reveal' ] },
+    # Documents
+    { mime = 'application/openxmlformats-officedocument.*', use = [ 'libreoffice' ] },
+    { mime = 'application/oasis.opendocument.*',            use = [ 'libreoffice' ] },
+    # Empty file
+    { mime = 'inode/empty', use = [ 'edit', 'reveal' ] },
+    # Fallback
+    { url = '*', use = [ 'open', 'reveal', 'compress' ] },
 ]
 
 # https://yazi-rs.github.io/docs/configuration/yazi#tasks
@@ -111,55 +117,57 @@ image_bound      = [ 0, 0 ]
 # https://yazi-rs.github.io/docs/configuration/yazi#plugin
 [plugin]
 fetchers = [
-	# Mimetype
-	{ id = "mime", name = "*", run = "mime", if = "!mime", prio = "high" },
+    # Mimetype
+    { id = 'mime', url = '*',  run = 'mime.local', prio = 'high' },
+    { id = 'mime', url = '*/', run = 'mime.dir',   prio = 'high' },
 ]
 preloaders = [
-	# Image
-	{ mime = "image/{avif,hei?,jxl,svg+xml}", run = "magick" },
-	{ mime = "image/*", run = "image" },
-	# Video
-	{ mime = "video/*", run = "video" },
-	# PDF
-	{ mime = "application/pdf", run = "pdf" },
-	# Font
-	{ mime = "font/*", run = "font" },
-	{ mime = "application/ms-opentype", run = "font" },
-	# Documents
-	{ mime = "application/openxmlformats-officedocument*", run = "office" },
-	{ mime = "application/oasis.opendocument.*", run = "office" },
-	{ mime = "application/ms-*", run = "office" },
-	{ mime = "application/msword", run = "office" },
+    # Image
+    { mime = 'image/{avif,hei?,jxl,svg+xml}', run = 'magick' },
+    { mime = 'image/*',                       run = 'image' },
+    # Video
+    { mime = 'video/*', run = 'video' },
+    # PDF
+    { mime = 'application/pdf', run = 'pdf' },
+    # Font
+    { mime = 'font/*',                  run = 'font' },
+    { mime = 'application/ms-opentype', run = 'font' },
+    # Documents
+    { mime = 'application/openxmlformats-officedocument*', run = 'office' },
+    { mime = 'application/oasis.opendocument.*',           run = 'office' },
+    { mime = 'application/ms-*',                           run = 'office' },
+    { mime = 'application/msword',                         run = 'office' },
 ]
 previewers = [
-	{ name = "*/", run = "folder", sync = true },
-	# Code
-	{ mime = "text/*", run = "code" },
-	{ mime = "*/{xml,javascript,wine-extension-ini}", run = "code" },
-	# JSON
-	{ mime = "application/{json,ndjson}", run = "json" },
-	# Image
-	{ mime = "image/{avif,hei?,jxl,svg+xml}", run = "magick" },
-	{ mime = "image/*", run = "image" },
-	# Video
-	{ mime = "video/*", run = "video" },
-	# PDF
-	{ mime = "application/pdf", run = "pdf" },
-	# Archive
-	{ mime = "application/{,g}zip", run = "archive" },
-	{ mime = "application/{tar,bzip*,7z-compressed,xz,rar,iso9660-image}", run = "archive" },
-	# Font
-	{ mime = "font/*", run = "font" },
-	{ mime = "application/ms-opentype", run = "font" },
-	# Documents
-	{ mime = "application/openxmlformats-officedocument*", run = "office" },
-	{ mime = "application/oasis.opendocument.*", run = "office" },
-	{ mime = "application/ms-*", run = "office" },
-	{ mime = "application/msword", run = "office" },
-	# Empty file
-	{ mime = "inode/empty", run = "empty" },
-	# Fallback
-	{ name = "*", run = "file" },
+    # Folder
+    { url = '*/', run = 'folder', sync = true },
+    # Code
+    { mime = 'text/*',                                run = 'code' },
+    { mime = '*/{xml,javascript,wine-extension-ini}', run = 'code' },
+    # JSON
+    { mime = 'application/{json,ndjson}',             run = 'json' },
+    # Image
+    { mime = 'image/{avif,hei?,jxl,svg+xml}', run = 'magick' },
+    { mime = 'image/*',                       run = 'image' },
+    # Video
+    { mime = 'video/*', run = 'video' },
+    # PDF
+    { mime = 'application/pdf', run = 'pdf' },
+    # Archive
+    { mime = 'application/{,g}zip',                                        run = 'archive' },
+    { mime = 'application/{tar,bzip*,7z-compressed,xz,rar,iso9660-image}', run = 'archive' },
+    # Font
+    { mime = 'font/*',                  run = 'font' },
+    { mime = 'application/ms-opentype', run = 'font' },
+    # Documents
+    { mime = 'application/openxmlformats-officedocument*', run = 'office' },
+    { mime = 'application/oasis.opendocument.*',           run = 'office' },
+    { mime = 'application/ms-*',                           run = 'office' },
+    { mime = 'application/msword',                         run = 'office' },
+    # Empty file
+    { mime = 'inode/empty', run = 'empty' },
+    # Fallback
+    { url = '*', run = 'file' },
 ]
 
 # https://yazi-rs.github.io/docs/configuration/yazi#input
@@ -168,72 +176,72 @@ cursor_blink = true
 
 # cd
 cd_title  = "Change directory:"
-cd_origin = "top-center"
+cd_origin = 'top-center'
 cd_offset = [ 0, 2, 50, 3 ]
 
 # create
-create_title = ["Create:", "Create (dir):"]
-create_origin = "top-center"
+create_title  = ["Create:", "Create (dir):"]
+create_origin = 'top-center'
 create_offset = [ 0, 2, 50, 3 ]
 
 # rename
 rename_title  = "Rename:"
-rename_origin = "hovered"
+rename_origin = 'hovered'
 rename_offset = [ 0, 1, 50, 3 ]
 
 # filter
 filter_title  = "Filter:"
-filter_origin = "top-center"
+filter_origin = 'top-center'
 filter_offset = [ 0, 2, 50, 3 ]
 
 # find
 find_title  = [ "Find next:", "Find previous:" ]
-find_origin = "top-center"
+find_origin = 'top-center'
 find_offset = [ 0, 2, 50, 3 ]
 
 # search
 search_title  = "Search via {n}:"
-search_origin = "top-center"
+search_origin = 'top-center'
 search_offset = [ 0, 2, 50, 3 ]
 
 # shell
 shell_title  = [ "Shell:", "Shell (block):" ]
-shell_origin = "top-center"
+shell_origin = 'top-center'
 shell_offset = [ 0, 2, 50, 3 ]
 
 # https://yazi-rs.github.io/docs/configuration/yazi#confirm
 [confirm]
 # trash
-trash_title 	= "Trash {n} selected file{s}?"
-trash_origin	= "center"
-trash_offset	= [ 0, 0, 70, 20 ]
+trash_title  = "Trash {n} selected file{s}?"
+trash_origin = 'center'
+trash_offset = [ 0, 0, 70, 20 ]
 
 # delete
-delete_title 	= "Permanently delete {n} selected file{s}?"
-delete_origin	= "center"
-delete_offset	= [ 0, 0, 70, 20 ]
+delete_title  = "Permanently delete {n} selected file{s}?"
+delete_origin = 'center'
+delete_offset = [ 0, 0, 70, 20 ]
 
 # overwrite
 overwrite_title   = "Overwrite file?"
 overwrite_content = "Will overwrite the following file:"
-overwrite_origin  = "center"
+overwrite_origin  = 'center'
 overwrite_offset  = [ 0, 0, 50, 15 ]
 
 # quit
 quit_title   = "Quit?"
 quit_content = "The following task is still running, are you sure you want to quit?"
-quit_origin  = "center"
+quit_origin  = 'center'
 quit_offset  = [ 0, 0, 50, 15 ]
 
 # https://yazi-rs.github.io/docs/configuration/yazi/#pick
 [pick]
 open_title  = "Open with:"
-open_origin = "hovered"
+open_origin = 'hovered'
 open_offset = [ 0, 1, 50, 7 ]
 
 # https://yazi-rs.github.io/docs/configuration/yazi#which
 [which]
-sort_by      	 = "none"
+sort_by        = 'none'
 sort_sensitive = false
-sort_reverse 	 = false
+sort_reverse   = false
 sort_translit  = false
