feat(hyprland): add some NetBeans `windowrule`

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -40,6 +40,7 @@ exec-once = $bar
 # https://wiki.hypr.land/Configuring/Keywords/#setting-the-environment
 env = TERMINAL,$terminal
 env = EDITOR,$editor
+env = PAGER,bat -p
 env = BROWSER,firefox
 
 env = GDK_BACKEND,wayland,x11,*
@@ -201,7 +202,7 @@ input {
 		tap_button_map = lrm
 		clickfinger_behavior = true
 		tap-to-click = true
-		drag_lock = 2
+		drag_lock = 1
 		tap-and-drag = true
 		flip_x = false
 		flip_y = false
@@ -417,6 +418,7 @@ bind = , Print, exec, grimblast save output ~/Pictures/Screenshots/$(date +%Y-%m
 bind = $mod, Q, killactive
 bind = $mod, F, fullscreen, 0
 bind = $mod, Tab, workspace, previous
+bind = $mod CTRL, I, workspace, previous
 bind = $mod, space, togglefloating,
 bind = $mod, X, exec, togglehyprtab.sh 
 bind = $mod SHIFT, R, exec, hyprctl reload
@@ -441,9 +443,10 @@ submap = resize
 	binde = SHIFT, K, resizeactive, 0 -66
 	binde = SHIFT, L, resizeactive, 66 0
 	bind = , Escape, submap, reset
-	bind = , Return, submap, reset
 	bind = CTRL, bracketleft, submap, reset
 	bind = CTRL, C, submap, reset
+	bind = , Return, submap, reset
+	bind = CTRL, J, submap, reset
 submap = reset
 # keybinds further down will be global again...
 
@@ -523,6 +526,18 @@ workspace = 10, monitor:HDMI-A-1, default:true
 workspace = special:firefoxd, on-created-empty:firefox --new-window about:blank
 bind = , XF86Launch2, togglespecialworkspace, firefoxd
 
+# file upload
+windowrule {
+	name = file upload
+	match:class = ^(firefox)$
+	match:title = ^(File Upload - .*)$
+	match:float = 1
+	match:fullscreen = 0
+
+	size = (monitor_w*0.7) (monitor_h*0.8)
+	center = on
+}
+
 # floating-editor
 windowrule {
 	name = floating-editor
@@ -549,12 +564,33 @@ windowrule {
 # java windows
 # https://www.reddit.com/r/hyprland/comments/16rwbun/comment/k2f0nco/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button
 windowrule {
-	name = NetBeans
-	match:class = ^(Apache NetBeans IDE 26)$
+	name = NetBeansStarting
+	match:class = ^(java-lang-Thread)$
+	match:title = ^(Starting Apache NetBeans IDE)$
 	match:float = 1
 	match:fullscreen = 0
 
-	stay_focused = off
+	center = on
+	stay_focused = on
+}
+windowrule {
+	name = NetBeansMainWindowTile
+	match:class = ^(Apache NetBeans IDE [0-9]+)$
+	match:title = ^(Apache NetBeans IDE [0-9]+|.* - Apache NetBeans IDE [0-9]+)$
+	match:float = 1
+	match:fullscreen = 0
+
+	tile = on
+}
+windowrule {
+	name = NetBeansPopups
+	match:class = ^(Apache NetBeans IDE [0-9]+)$
+	match:title = ^(win[0-9]+)$
+	match:float = 1
+	match:fullscreen = 0
+
+	no_initial_focus = on
+	no_focus = on
 }
 windowrule {
 	name = BurpSuite
