--- a/config/yazi/yazi.toml
+++ b/config/yazi/yazi.toml
@@ -26,7 +26,8 @@ tab_size        = 2
 max_width       = 600
 max_height      = 900
 cache_dir       = ''
-image_delay     = 100
+# image_delay     = 100
+image_delay     = 0
 image_filter    = 'triangle'
 image_quality   = 75
 ueberzug_scale  = 1
